# pi5-fan-controller

./: .gitignore  CMakeLists.txt  README.md
.github/: dependabot.yml
config/: pi5-fan-controller.conf
include/: config_parser.hpp  fan_controller.hpp
src/: config_parser.cpp  fan_controller.cpp  main.cpp
systemd/: pi5-fan-controller.service
